# Projekt-gry---PSiO

./: .gitignore  CMakeLists.txt  enemy.h
include/: Gra.cpp  animatedsprite.h  enemy.h  gra.h  gracz.h  leaderboard.h  levelmodule.h  menadzer_tekstur.h  pasek_boczny.cpp  pasek_boczny.h  pocisk.h  przycisk.h  przyciskstart.h
src/: Gra.cpp  animatedsprite.cpp  enemy.cpp  enemy.h  gracz.cpp  leaderboard.cpp  levelmodule.cpp  main.cpp  menadzer_tekstur.cpp  okno.cpp  pasek_boczny.cpp  pocisk.cpp  przycisk.cpp  przyciskstart.cpp
